v3.0.0 - deeper testing
* Deeper testing - nearly 100% test coverage
* Breaking changes (see docs/migration_to_v3.md):
  * Spelling of constant values
  * Name of the HTTP codes
  * Removal of the `update` method in `Db`
  * FunctionalTesting now requires the hostname and port
  * FunctionalTesting.send now requires a byte array body parameter
  * Removed an overload of `FunctionalTesting.send()`
  * Methods in `FileUtils` now don't throw `IOException`
  * `TheBrig.sendToJail` now returns true if succeeded
  * `TheBrig.getInmates` now returns a list of `Inmate` instead of
    `List<Map.Entry<String, Long>>`
* Refactorings / documentation improved all over
* New helper methods in TestLogger for searching logs
* In Logger, if the `ActionQueue` is stopped or null, will fall back
  to use `System.out.printf`
* In TestLogger, new method `doesMessageExist` which handles the
  common usage better, that is:

  `assertTrue(
	logger.findFirstMessageThatContains(
		"foo foo did a foo").length() > 0);`

  becomes

  `assertTrue(logger.doesMessageExist("foo foo did a foo"));`

* Truncate timestamp in logging to microseconds
* Modify the `ThrowingRunnable` and other functional interfaces to
  handle exceptions better
* Raised the bar for testing throughout the system.  Methods
  were adjusted to expose code for testing.  Linting tools recommended
  naming modifications.
* Documentation was written to help users through migration - see
  docs/migration_to_v3.md.

* The `update` and `write` methods in the database shared so much
  functionality, it made sense to combine them.  There are now only
  two methods in Db handling data modification.  If creating new data,
  set the index to 0 on the object extending DbData.

  This code creates a new item in the database:

      db.write(new Foo(0, 2, "a"));

  This code updates an item:

      db.write(new Foo(1, 2, "a"));

  Adding a new item with a positive index will fail - the database has
  to generate the index for you.  The return